--- a/src/sakai/announcement/announcement-tool/tool/src/webapp/vm/announcement/chef_announcements-revise.vm
+++ b/src/sakai/announcement/announcement-tool/tool/src/webapp/vm/announcement/chef_announcements-revise.vm
@@ -167,69 +167,159 @@ function resizeFrame(){
 						</div>
 						#end
 					#else
-						#if ($!groups.size() >1)
+						#if (($!groups && $!groups.size() >1) ||  ($!coordgroups && $!coordgroups.size() >1))
 							<label for="$tlang.getString('groups')">$tlang.getString("groups")</label>
 						#else
 							<label for="$tlang.getString('group')">$tlang.getString("group")</label>
 						#end
 					#end
-					#if ($!groups)
-						## added group awareness
-						<div class="checkbox">
-						  <label for="groups">
-							<input type="radio" name="announceTo" id="groups" 
-							value="groups" #if(!$!pubview && ($!announceTo == "groups" || $!message.AnnouncementHeader.Access == $groupAccess))checked="checked"#end 
-							onclick="$('#groupTable').fadeIn('slow');resizeFrame(); updateEmailDropdownOptions()"  />
-							$tlang.getString("displayto.selected")
-						  </label>
-						</div>
-
-						#if(!$!pubview && ($!announceTo == "groups" || $!message.AnnouncementHeader.Access == $groupAccess))
-							#set ($listDisplay="block")
-						#else
-							#set ($listDisplay="none")
-						#end
-						<div class="table-responsive">
-							<table id="groupTable" style="display:$listDisplay" class="table table-hover table-striped table-bordered" summary="$tlang.getString("revise.group.list.summary")">
-							<caption class="skip" style="display:none">$tlang.getString("displayto.selected")</caption>
-								<tr>
-									<th id ="selectAllGroups" class="attach">
-										<input type="checkbox" name="selectall" value="" id="selectall" title="$tlang.getString("revise.group.list.toggle")" onclick="javascript:toggleSelectAll(this, 'selectedGroups')"  />
-									</th>
-							 		<th id ="groupname">
-										$tlang.getString("revise.group.list.title")
-									</th>
-									<th id ="groupdescription">
-										$tlang.getString("revise.group.list.desc")
-									</th>
-								</tr>
-								#foreach ($group in $!groups)
+					#if ($!groups || $!coordgroups)
+						#if (!$isEspaiCoord)
+							## added group awareness
+							<div class="checkbox">
+								<label for="groups">
+									<input type="radio" name="announceTo" id="groups" 
+									value="groups" #if(!$!pubview && ($!announceTo == "groups" || $!message.AnnouncementHeader.Access == $groupAccess))checked="checked"#end 
+									onclick="$('#groupTable').fadeIn('slow');resizeFrame(); updateEmailDropdownOptions()"  />
+									$tlang.getString("displayto.selected")
+								</label>
+							</div>
+							#if(!$!pubview && ($!announceTo == "groups" || $!message.AnnouncementHeader.Access == $groupAccess))
+								#set ($listDisplay="block")
+							#else
+								#set ($listDisplay="none")
+							#end
+								<div class="table-responsive">
+								<table id="groupTable" style="display:$listDisplay" class="table table-hover table-striped table-bordered"  summary="$tlang.getString("revise.group.list.summary")">
+								<caption class="skip" style="display:none">$tlang.getString("displayto.selected")</caption>
 									<tr>
-										<td headers="selectAllGroups" class="attach">
-											#set($selected=false)
-											#foreach($aGroupRef in $announceToGroups)
-												#set($aGroup = $!site.getGroup($!aGroupRef))
-												#if ($!group.Id == $!aGroup.Id)
-													#set($selected = true)
-												#end
-											#end
-											#if($groups.size() == 1) #set($selected=true) #end
-											#set($disabled=true)	
-											<input type="checkbox" name="selectedGroups" id="group-$group.Id" title="$validator.escapeHtml($group.title)" value="$group.Id" #if($selected) checked="checked"#end />
-										</td>
-										<td headers="groupname" nowrap="nowrap">
-											<label for="group-$group.Id">
-												$validator.escapeHtml($group.Title)
-											</label>	
-										</td>
-										<td headers="groupdescription" width="100%"> ##mozilla does not resize table children dynamically , so set here
-											#set($description = "")
-											#set($description = $group.Description)
-											$validator.escapeHtml($!description)
-										</td>
+										<th headers="selectAllGroups" class="attach">
+											<input type="checkbox" name="selectall" value="" id="selectall" title="$tlang.getString("revise.group.list.toggle")" onclick="javascript:toggleSelectAll(this, 'selectedGroups')"  />
+										</th>
+										<th headers="groupname">
+											$tlang.getString("revise.group.list.title")
+										</th>
+										<th headers="groupdescription">
+											$tlang.getString("revise.group.list.desc")
+										</th>
 									</tr>
+									#foreach ($group in $!groups)
+										<tr>
+											<td headers="selectAllGroups" class="attach">
+												#set($selected=false)
+												#foreach($aGroupRef in $announceToGroups)
+													#set($aGroup = $!site.getGroup($!aGroupRef))
+													#if ($!group.Id == $!aGroup.Id)
+														#set($selected = true)
+													#end
+												#end
+													#if($groups.size() == 1) #set($selected=true) #end
+													#set($disabled=true)
+				##									#if($allowedRemoveGroups.contains($group)) 
+														<input type="checkbox" name="selectedGroups" id="group-$group.Id" title="$validator.escapeHtml($group.title)" value="$group.Id" #if($selected) checked="checked"#end />
+				##									#else
+				##										<img src="#imageLink("sakai/checkon.gif")" border="0" width="17" height="13" align="top" />
+				##									#end
+													
+				##									<input #if($disabled) type="hidden" #else type="checkbox" #end name="selectedGroups" id="group-$group.Id" title="$group.Title" value="$group.Id" #if($selected) checked="checked"#end/>
+				##									#if($disabled && $selected)<img src="#imageLink("sakai/checkon.gif")" border="0" width="17" height="13" align="top" />#end
+												</td>
+												<td headers="groupname" nowrap="nowrap">
+													<label for="group-$group.Id">
+														$validator.escapeHtml($group.Title)
+													</label>	
+												</td>
+												<td headers="groupdescription" width="100%"> ##mozilla does not resize table children dynamically , so set here
+													#set($description = "")
+													#set($description = $group.Description)
+													$validator.escapeHtml($!description)
+												</td>
+											</tr>
+										#end
+									</table>
+									</div>
+							#else
+								<div class="checkbox">
+									<label for="groups">
+										<input type="radio" name="announceTo" id="groups" 
+										value="groups" #if(!$!pubview && ($!announceTo == "groups" || $!message.AnnouncementHeader.Access == $groupAccess))checked="checked"#end 
+										onclick="$('#groupTable').fadeIn('slow');resizeFrame()"  />
+										##<input type="radio" name="announceTo" id="groups" value="groups" #if(!$!pubview && ($!announceTo == "groups" || $!message.AnnouncementHeader.Access == $groupAccess))checked="checked"#end onclick="document.getElementById('groupTable').style.display = 'block';document.getElementById('groupTable').style.width = '80%';"  />
+					
+										$tlang.getString("displayto.selected")
+									</label>
+								</div>
+								
+								<ul id="groupTable" class="llistacursos" style="display:none">
+								#foreach ($cursgroup in $!coordgroups)
+									<li> 
+										
+										#set($group = $!cursgroup.getGroup())
+										#set($selected=false)
+
+										#foreach($aGroupRef in $announceToGroups)
+											#set($aGroup = $!site.getGroup($!aGroupRef))
+											#if ($!group.Id == $!aGroup.Id)
+												#set($selected = true)
+											#end
+										#end
+
+										#if($groups.size() == 1) #set($selected=true) #end
+										#set($disabled=true)
+										
+										<input type="checkbox" name="selectedGroups" id="group-$group.Id" title="$validator.escapeHtml($group.title)" value="$group.Id" #if($selected) checked="checked"#end />
+										<div class="groupTitle">$validator.escapeHtml($!group.Title) <span class="groupDescription"> ($validator.escapeHtml($!group.Description))</span></div>
+										
+
+										#if ($!cursgroup.hasChildren())
+											<ul class="llistaassignatures">
+												#foreach ($assiggroup in $!cursgroup.getChildren())
+												<li> 
+													#set ($group2 = $!assiggroup.getGroup())
+													
+													#set($selected=false)
+													#foreach($aGroupRef2 in $announceToGroups)
+														#set($aGroup2 = $!site.getGroup($!aGroupRef2))
+														#if ($!group2.Id == $!aGroup2.Id)
+															#set($selected = true)
+														#end
+													#end
+													#if($groups.size() == 1) #set($selected=true) #end
+													#set($disabled=true)
+													<input type="checkbox" name="selectedGroups" id="group-$group2.Id" title="$validator.escapeHtml($group2.title)" value="$group2.Id" #if($selected) checked="checked"#end />
+													<div class="groupTitle">$validator.escapeHtml($!group2.Title) <span class="groupDescription"> ($validator.escapeHtml($!group2.Description))</span></div>
+													
+													#if ($!assiggroup.hasChildren())
+														<ul class="llistagrups">
+														#foreach ($grupgroup in $!assiggroup.getChildren())
+															<li> 
+																#set ($group3 = $!grupgroup.getGroup())
+																
+																#set($selected=false)
+																#foreach($aGroupRef3 in $announceToGroups)
+																	#set($aGroup3 = $!site.getGroup($!aGroupRef3))
+																	#if ($!group3.Id == $!aGroup3.Id)
+																		#set($selected = true)
+																	#end
+																#end
+																#if($groups.size() == 1) #set($selected=true) #end
+																#set($disabled=true)
+																<input type="checkbox" name="selectedGroups" id="group-$group3.Id" title="$validator.escapeHtml($group3.title)" value="$group3.Id" #if($selected) checked="checked"#end />
+																<div class="groupTitle">$validator.escapeHtml($!group3.Title) <span class="groupDescription"> ($validator.escapeHtml($!group3.Description))</span></div>
+																
+															</li>
+														#end
+														</ul>
+													#end
+												</li>
+											#end
+										</ul>
+										#end
+										
+									</li>
 								#end
-							</table>
+								</ul>
+							#end
 						</div>
 					#end
 				#end
