MSONZE-143 Canviar texts a la implementació de Urkund

--- a/src/sakai/assignment/assignment-tool/tool/src/webapp/vm/assignment/chef_assignments_student_view_grade.vm
+++ b/src/sakai/assignment/assignment-tool/tool/src/webapp/vm/assignment/chef_assignments_student_view_grade.vm
@@ -164,7 +164,7 @@
 				#if($allowReviewService && $assignment.getContent().AllowReviewService && $assignment.getContent().AllowStudentViewReport && ($assignment.getContent().getTypeOfSubmission() != 4 || $submission.getContentReviewResults().size() > 0))
 					<tr>
 						<th>
-							$reviewServiceName&nbsp;$tlang.getString("review.report")
+							$tlang.getString("review.report")
 						</th>
 							<td>
 							#if (!$submission)
