--- a/src/sakai/assignment/assignment-tool/tool/src/webapp/vm/assignment/chef_assignments_instructor_report_submissions.vm
+++ b/src/sakai/assignment/assignment-tool/tool/src/webapp/vm/assignment/chef_assignments_instructor_report_submissions.vm
@@ -12,8 +12,8 @@
 		</h1>
 	</div>
 
-	<div class="navPanel">
-		<div class="viewNav">
+	<div class="navPanel row">
+		<div class="viewNav col-xs-12">
 			<br />
 			#if (!$hasAtLeastOneAnonAssignment)
 			<form id="viewForm" name="viewForm" class="inlineForm" method="post" action="#toolForm("AssignmentAction")">
@@ -65,7 +65,9 @@
 
 
 			</div>
-			#paginator( $topMsgPos $btmMsgPos $allMsgNumber $pagesize $goFPButton $goPPButton $goNPButton $goLPButton $sakai_csrf_token $pagesizes )
+			<div class="col-lg-6 col-md-7 col-sm-9 col-xs-12">
+				#paginator( $topMsgPos $btmMsgPos $allMsgNumber $pagesize $goFPButton $goPPButton $goNPButton $goLPButton $sakai_csrf_token $pagesizes )
+			</div>
 		</div>
 		#if ($alertMessage)<div class="alertMessage">$tlang.getString("gen.alert") $alertMessage</div><div class="clear"></div>#end
 		<form name="reportForm" action="#toolForm("AssignmentAction")" method="post">
