MSU-3 Aplicar pedaços de performance per al gradebook ng
- Arreglat bug al fer click a un alumne per a veure el resum de les
qualificacions.
- Arreglats bugs visuals derivats dels improvements.

--- a/src/sakai/gradebookng/tool/src/webapp/styles/gradebook-grades.css
+++ b/src/sakai/gradebookng/tool/src/webapp/styles/gradebook-grades.css
@@ -490,7 +490,8 @@
   padding: 0 0.4em;
   width: 100%;
   white-space: nowrap; /* don't wrap so it stays on one line */
-  height: 40px;
+  height: 57px;
+  line-height: 54px;
 }
 #gradebookGradesToolbar ul {
   list-style: none;
