--- a/src/sakai/announcement/announcement-tool/tool/src/webapp/vm/announcement/chef_announcements.vm
+++ b/src/sakai/announcement/announcement-tool/tool/src/webapp/vm/announcement/chef_announcements.vm
@@ -169,7 +169,7 @@
 					</div>
 				</div> ##end navPanel
 				<form name="announcementListForm" action="#toolForm("AnnouncementAction")" method="post">
-				<div class="table-responsive">
+				<div class="table-responsive table-announcements">
 					<table class="table table-hover table-striped table-bordered" border="0" cellspacing="0" summary="$tlang.getString('gen.tablecaptionworksp')">
 						<tr>
 							<th id ="subject">
