FCV-43 Límite tamaño máximo de fichero en actividades

--- a/src/sakai/assignment/assignment-tool/tool/src/webapp/vm/assignment/chef_assignments_student_view_submission.vm
+++ b/src/sakai/assignment/assignment-tool/tool/src/webapp/vm/assignment/chef_assignments_student_view_submission.vm
@@ -643,8 +643,15 @@ $(document).ready(function(){
 									<img alt="$reviewIndicator" title="$reviewIndicator" src="/library/image/silk/rosette.png" class="assignmentRosette"/>
 									<em>
 										$plagiarismNote
-										#if ($plagiarismFileTypes)
-											$plagiarismFileTypes
+										#if ($plagiarismFileTypes || $plagiarismFileSize)
+											<ul>
+												#if ($plagiarismFileTypes)
+													<li>$plagiarismFileTypes</li>
+												#end
+												#if ($plagiarismFileSize)
+													$plagiarismFileSize
+												#end
+											</ul>
 										#end
 									</em>
 								</p>
@@ -717,8 +724,15 @@ $(document).ready(function(){
 							<img alt="$reviewIndicator" title="$reviewIndicator" src="/library/image/silk/rosette.png" class="assignmentRosette"/>
 							<em>
 								$plagiarismNote
-								#if ($plagiarismFileTypes)
-									$plagiarismFileTypes
+								#if ($plagiarismFileTypes || $plagiarismFileSize)
+									<ul>
+										#if ($plagiarismFileTypes)
+											<li>$plagiarismFileTypes</li>
+										#end
+										#if ($plagiarismFileSize)
+											$plagiarismFileSize
+										#end
+									</ul>
 								#end
 							</em>
 						</p>
